mugen-x86/logs/easymock/oe_test_easymock_spring/2023-06-06-19_23_07.log
+ source ../common/common_easymock.sh
++ source /root/mugen-riscv/libs/locallibs/common_lib.sh
+++ python3 --version
+++ '[' 0 -eq 0 ']'
+++ source /root/mugen-riscv/libs/locallibs/common_lib_python.sh
+ main
++ type -t post_test
+ '[' -n function ']'
+ trap post_test EXIT INT HUP TERM
+ rpm -qa
+ grep expect
++ type -t config_params
+ '[' -n '' ']'
++ type -t pre_test
+ '[' -n function ']'
+ pre_test
+ LOG_INFO 'Start to prepare the test environment.'
+ message='Start to prepare the test environment.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'Start to prepare the test environment.'
Tue Jun  6 19:23:16 2023 - INFO  - Start to prepare the test environment.
+ DNF_INSTALL springframework-test
+ pkgs=springframework-test
+ node=1
+ '[' -z '' ']'
+ tmpfile=
++ python3 /root/mugen-riscv/libs/locallibs/rpm_manage.py install --pkgs springframework-test --node 1 --tempfile ''
Tue Jun  6 19:23:33 2023 - ERROR - pkgs:(springframework-test) not found
+ tmpfile2=
+ '[' -z '' ']'
+ tmpfile=
+ deploy_env
+ DNF_INSTALL 'easymock junit'
+ pkgs='easymock junit'
+ node=1
+ '[' -z '' ']'
+ tmpfile=
++ python3 /root/mugen-riscv/libs/locallibs/rpm_manage.py install --pkgs 'easymock junit' --node 1 --tempfile ''
+ tmpfile2=/tmp/tmpekom7i6l
+ '[' -z '' ']'
+ tmpfile=/tmp/tmpekom7i6l
++ grep 'java-.*-openjdk'
++ rpm -qa 'java*'
++ awk -F - '{print $2}'
+ java_version=1.8.0
+ DNF_INSTALL java-1.8.0-devel
+ pkgs=java-1.8.0-devel
+ node=1
+ '[' -z /tmp/tmpekom7i6l ']'
++ python3 /root/mugen-riscv/libs/locallibs/rpm_manage.py install --pkgs java-1.8.0-devel --node 1 --tempfile /tmp/tmpekom7i6l
+ tmpfile2=/tmp/tmpekom7i6l
+ '[' -z /tmp/tmpekom7i6l ']'
+ LOG_INFO 'End to prepare the test environment.'
+ message='End to prepare the test environment.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'End to prepare the test environment.'
Tue Jun  6 19:28:02 2023 - INFO  - End to prepare the test environment.
++ type -t run_test
+ '[' -n function ']'
+ run_test
+ LOG_INFO 'Start to run test.'
+ message='Start to run test.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'Start to run test.'
Tue Jun  6 19:28:03 2023 - INFO  - Start to run test.
+ javac -classpath '/usr/share/java/*:/usr/share/java/hamcrest/*:/usr/share/java/springframework/*:/usr/share/java/cglib/*:/usr/share/java/objenesis/*:' -d . OtherClass.java OurClass.java OurClassTest.java
OurClassTest.java:4: error: package org.springframework.test.util does not exist
import org.springframework.test.util.ReflectionTestUtils;
                                    ^
OurClassTest.java:18: error: cannot find symbol
        ReflectionTestUtils.setField(classUnderTest, "other", other);
        ^
  symbol:   variable ReflectionTestUtils
  location: class OurClassTest
OurClassTest.java:23: error: cannot find symbol
        ReflectionTestUtils.setField(classUnderTest, "other", other2);
        ^
  symbol:   variable ReflectionTestUtils
  location: class OurClassTest
3 errors
+ CHECK_RESULT 1
+ actual_result=1
+ expect_result=0
+ mode=0
+ error_log=
+ '[' -z 1 ']'
+ '[' 0 -eq 0 ']'
+ test 1x '!=' 0x
+ test -n ''
+ (( exec_result++ ))
+ LOG_ERROR 'oe_test_easymock_spring.sh line 30'
+ message='oe_test_easymock_spring.sh line 30'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level error --message 'oe_test_easymock_spring.sh line 30'
Tue Jun  6 19:28:22 2023 - ERROR - oe_test_easymock_spring.sh line 30
+ return 0
+ java -classpath '/usr/share/java/*:/usr/share/java/hamcrest/*:/usr/share/java/springframework/*:/usr/share/java/cglib/*:/usr/share/java/objenesis/*:' org.junit.runner.JUnitCore OurClassTest
+ grep 'OK (1 test)'
+ CHECK_RESULT 1
+ actual_result=1
+ expect_result=0
+ mode=0
+ error_log=
+ '[' -z 1 ']'
+ '[' 0 -eq 0 ']'
+ test 1x '!=' 0x
+ test -n ''
+ (( exec_result++ ))
+ LOG_ERROR 'oe_test_easymock_spring.sh line 32'
+ message='oe_test_easymock_spring.sh line 32'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level error --message 'oe_test_easymock_spring.sh line 32'
Tue Jun  6 19:28:28 2023 - ERROR - oe_test_easymock_spring.sh line 32
+ return 0
+ LOG_INFO 'End to run test.'
+ message='End to run test.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'End to run test.'
Tue Jun  6 19:28:30 2023 - INFO  - End to run test.
+ CASE_RESULT 0
+ case_re=0
+ test -z 2
+ test 2 -gt 0
+ LOG_ERROR 'failed to execute the case.'
+ message='failed to execute the case.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level error --message 'failed to execute the case.'
Tue Jun  6 19:28:31 2023 - ERROR - failed to execute the case.
+ exit 2
+ post_test
+ LOG_INFO 'Start to restore the test environment.'
+ message='Start to restore the test environment.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'Start to restore the test environment.'
Tue Jun  6 19:28:33 2023 - INFO  - Start to restore the test environment.
+ clear_env
+ DNF_REMOVE
+ node=1
+ pkg_list=
+ mode=0
+ [[ -z /tmp/tmpekom7i6l ]]
+ '[' 0 -ne 0 ']'
+ '[' 1 == 0 ']'
+ python3 /root/mugen-riscv/libs/locallibs/rpm_manage.py remove --node 1 --pkgs '' --tempfile /tmp/tmpekom7i6l
+ '[' 0 -ne 0 ']'
++ ls
++ grep -vE '.sh|.java|.xml|expect_result|main|test'
+ rm -rf
+ LOG_INFO 'End to restore the test environment.'
+ message='End to restore the test environment.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'End to restore the test environment.'
Tue Jun  6 19:29:12 2023 - INFO  - End to restore the test environment.
